--- a/labs/express/starter-code-hbs/package.json
+++ b/labs/express/starter-code-hbs/package.json
@@ -4,6 +4,7 @@
   "description": "An app to build your own custom burger",
   "main": "server.js",
   "scripts": {
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
